images/external-dns/tests/etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
spec:
  type: ClusterIP
  ports:
  - name: etcd-client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app.kubernetes.io/name: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  clusterIP: None
  ports:
  - port: 2379
    name: client
  - port: 2380
    name: peer
  selector:
    app.kubernetes.io/name: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  labels:
    app.kubernetes.io/name: etcd
spec:
  serviceName: etcd
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: etcd
  template:
    metadata:
      name: etcd
      labels:
        app.kubernetes.io/name: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.4.2
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        volumeMounts:
        - name: data
          mountPath: /var/run/etcd
        command:
          - /bin/sh
          - -c
          - |
            exec etcd --name $macintosh.lan               --listen-peer-urls http://0.0.0.0:2380               --listen-client-urls http://0.0.0.0:2379               --advertise-client-urls http://$macintosh.lan.etcd:2379               --initial-advertise-peer-urls http://$macintosh.lan:2380               --initial-cluster-token etcd-cluster-1               --initial-cluster "etcd-0=http://etcd-0.etcd:2380"               --initial-cluster-state new               --data-dir /var/run/etcd/default. [...]
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: standard
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Mi
